--- a/src/main/resources/templates/configure.html
+++ b/src/main/resources/templates/configure.html
@@ -37,7 +37,7 @@
 
 	    <div id="" class="row">
 
-	    	<div class="col-md-4" id="head-holder">
+	    	<div class="col-md-3" id="head-holder">
 		    	<form id="category-form">
 		    		<div class="form-group" style="display: none">
 		    		<label for="forHead">Head</label>
@@ -58,7 +58,7 @@
 
 				</div>
 	    	</div>
-	    	<div class="col-md-4" id="lesson-holder">
+	    	<div class="col-md-3" id="lesson-holder">
 	    		<div class="form-group">
 		    		<label for="forHead">Head</label>
 		    		<input type="text" class="form-control" name="" id="forHead">
@@ -79,7 +79,7 @@
 				
 				</div>	    	
 	    	</div>
-	    	<div class="col-md-4" id="topic-holder">
+	    	<div class="col-md-3 vertical-border" id="topic-holder">
 	    		<div class="form-group">
 		    		<label for="forLesson">Lesson</label>
 		    		<input type="text" class="form-control" name="" id="forLesson">
@@ -101,6 +101,56 @@
 				</div>	 
 
 	    	</div>
+	    	
+	    	<div class="col-md-3">
+				<a  href=# data-toggle="modal" data-target="#editExamModal">
+  				Edit Exams
+				</a>
+				<div class="modal fade" id="editExamModal" tabindex="-1" role="dialog"
+					aria-labelledby="myModalLabel">
+					<div class="modal-dialog" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal"
+									aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+								<h4 class="modal-title" id="myModalLabel">Exams</h4>
+							</div>
+							<div class="modal-body">
+								<div class="row">
+									<div id="exam-list" class="col-md-6 vertical-border" >
+				
+									</div>
+									<div  class="col-md-6" >
+										<form id="exam-form">
+											<div class="form-group" style="display: none">
+												<label for="forHead">Exam</label> <input type="text"
+													class="form-control" name="">
+											</div>
+											<div class="form-group">
+												<label for="examInput">Exam</label> <input type="text"
+													class="form-control" name="" id="examInput">
+											</div>
+											<button type="submit" class="btn btn-primary">Create</button>
+										</form>
+
+									</div>
+									
+								</div>
+								
+								
+							
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-default"
+									data-dismiss="modal">Close</button>
+
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 	  		
 	    </div>
 
