--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,13 +14,13 @@
 						class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Questions</a>
+				<!--<a class="navbar-brand" href="#">Questions</a>-->
 			</div>
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="home">Home</a></li>
-					<li><a href="explore">Explore</a></li>
+					<li class="active"><a href="home"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a></li>
 					<li><a href="create">Create</a></li>
+					<li><a href="explore">View/Edit</a></li>
 					<li><a href="configure">Configure</a></li>
 				</ul>
 			</div>
