update test state on finish and a lot of bug fixes

--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -91,6 +91,7 @@
 			</div>
 			<div class="col-md-2 text-right">
 				<button id="nextQ" type="button" class="btn btn-primary btn-block">Next</button>
+				<button id="finishTest" type="button" class="btn btn-primary btn-block">Finish Test</button>
 			</div>
 			<div class="col-md-1">
 			
