updates to the test flow

--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -140,6 +140,16 @@
 	    </div>
 	
 	</script>
+	
+	<script id="testFinishTemplate" type="text/template">
+
+		<div class="panel panel-default">
+			
+			<div class="panel-body"><p>{{finishText}}</p></div>
+			
+	    </div>
+	
+	</script>
 
 	<script id="questionTemplate" type="text/template">
 
